[package]
name = "scrap-practical"
version = "0.1.0"
authors = ["Simon Scatton <simon.scatton@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
argh  = "0.1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
